# tetris

./: .gitignore  CMakeLists.txt  CMakePresets.json  tetris.sln  tetris.vcxproj  vcpkg.json
src/: engine.c  engine.h  game.c  game.h  main.c
